--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,27 @@
     <script src="js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Bootstrapサンプル</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <!-- ここからが追加した部分 -->
+      <div class="panel panel-default">
+        <div class="panel-heading">パネルの見出し</div>
+        <div class="panel-body">
+          <p>パネルの本文</p>
+        </div>
+      </div>
+      <!-- ここまで -->
+    </div>
   </body>
 </html>
