--- a/www/index.html
+++ b/www/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Sample</title>
     <!-- BootstrapのCSS読み込み -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
     <!-- jQuery読み込み -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- BootstrapのJS読み込み -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-default">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
             <span class="icon-bar"></span>
@@ -23,17 +23,10 @@
           </button>
           <a class="navbar-brand" href="#">Bootstrapサンプル</a>
         </div>
-      </div>
-    </nav>
-    <div class="container">
-      <!-- ここからが追加した部分 -->
-      <div class="panel panel-default">
-        <div class="panel-heading">パネルの見出し</div>
-        <div class="panel-body">
-          <p>パネルの本文</p>
+        <div class="collapse navbar-collapse" id="navigation">
+          <p class="navbar-text navbar-right">ozaki25 さんでログイン中</p>
         </div>
       </div>
-      <!-- ここまで -->
-    </div>
+    </nav>
   </body>
 </html>
