--- a/www/index.html
+++ b/www/index.html
@@ -13,20 +13,37 @@
     <script src="./js/bootstrap.min.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Bootstrapサンプル</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navigation">
-          <p class="navbar-text navbar-right">ozaki25 さんでログイン中</p>
-        </div>
+    <div class="container">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>名前</th>
+              <th>メールアドレス</th>
+              <th>電話番号</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+                <td>煌木 太郎</td>
+                <td>taro.kirameki@example.com</td>
+                <td>09011112222</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+                <td>煌木 次郎</td>
+                <td>jiro.kirameki@example.com</td>
+                <td>09033334444</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+                <td>煌木 花子</td>
+                <td>hanako.kirameki@example.com</td>
+                <td>09055556666</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-    </nav>
   </body>
 </html>
