--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <script src="./js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="background-color:red">
         <table class="table">
           <thead>
             <tr>
