--- a/www/index.html
+++ b/www/index.html
@@ -90,7 +90,7 @@
     <!-- etc JavaScript
     ================================================== -->
     <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?callback=naoetumap.initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?callback=naoetumap.initMap&key=AIzaSyBot8cACK5aXhcn17fJJ4oGklzMD1XKrYg"></script>
 
   </body>
 </html>
