--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@
                       <label for="TypeList">種類</label>
                       <select class="form-control" id="TypeList"></select>
                   </div>
-                  <button type="submit" id="SendBtn" class="btn btn-primary">送信する</button>
+                  <button type="button" id="SendBtn" class="btn btn-primary">送信する</button>
               </form>
             </div>
           </div>
@@ -74,17 +74,18 @@
       <p>&copy; ArukISoft. 2013-2018</p>
     </footer>
 
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!--script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script-->
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="./js/bootstrap.min.js"></script>
+
     <!-- NaoetuGps core JavaScript
     ================================================== -->
     <!-- NaoetuGps -->
     <script src="jsmy/naoetu.js"></script>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="./js/bootstrap.min.js"></script>
 
     <!-- etc JavaScript
     ================================================== -->
