--- a/www/index.html
+++ b/www/index.html
@@ -66,7 +66,7 @@
                       <label for="TypeList">種類</label>
                       <select class="form-control" id="TypeList"></select>
                   </div>
-                  <button type="button" id="SendBtn" class="btn btn-primary">送信する</button>
+                  <button type="button" id="SendBtn" class="btn btn-primary">送信する</button><span id="result1" name="result1"></span>
               </form>
             </div>
           </div>
