--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
                   <select class="form-control" id="TypeListViewer"></select>
               </div>
               <button type="button" id="DataGetBtn" class="btn btn-primary">更新する</button>
+              <button type="button" id="PosCopyBtn" class="btn btn-primary">座標を位置発信側へ</button>
           </form>
     </div>
       </div>
