--- a/www/index.html
+++ b/www/index.html
@@ -93,6 +93,8 @@
     ================================================== -->
     <!-- NaoetuGps -->
     <script src="jsmy/naoetu.js"></script>
+    <!-- Node.js - Socket.io -->
+    <script src="http://27.120.99.9:50001/socket.io/socket.io.js"></script>
 
     <!-- etc JavaScript
     ================================================== -->
