--- a/www/index.html
+++ b/www/index.html
@@ -91,15 +91,15 @@
 
     <!-- NaoetuGps core JavaScript
     ================================================== -->
-    <!-- NaoetuGps -->
-    <script src="jsmy/naoetu.js"></script>
     <!-- Node.js - Socket.io -->
     <script src="http://27.120.99.9:50001/socket.io/socket.io.js"></script>
+    <!-- NaoetuGps -->
+    <script src="jsmy/naoetu.js"></script>
 
     <!-- etc JavaScript
     ================================================== -->
     <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?callback=naoetumaps.initMap&key=AIzaSyBot8cACK5aXhcn17fJJ4oGklzMD1XKrYg"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?callback=naoetumaps.googlemapComp&key=AIzaSyBot8cACK5aXhcn17fJJ4oGklzMD1XKrYg"></script>
 
   </body>
 </html>
