--- a/www/index.html
+++ b/www/index.html
@@ -99,7 +99,7 @@
     <!-- etc JavaScript
     ================================================== -->
     <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?callback=naoetumaps.googlemapComp&key=AIzaSyBot8cACK5aXhcn17fJJ4oGklzMD1XKrYg"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?callback=NaoetuMain.googlemapComp&key=AIzaSyBot8cACK5aXhcn17fJJ4oGklzMD1XKrYg"></script>
 
   </body>
 </html>
