--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>NaoetuGPS</title>
+    <title>Naoetu Plus One Project.</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">NaoetuGPS</a>
+      <a class="navbar-brand" href="#">Naoetu Plus One Project.</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -78,7 +78,7 @@
     </main>
 
     <footer class="container">
-      <p>&copy; ArukISoft. 2013-2018</p>
+      <p>&copy; Naoetu Plus One Project. since 2018</p>
     </footer>
 
     <!-- Bootstrap core JavaScript
