--- a/www/index.html
+++ b/www/index.html
@@ -55,15 +55,15 @@
             <div name="mapsend">
               <div name="mapsend-map" id="mapsend-map" style="width:100%;height:300px;"></div>
               <form name="mapsend-navi">
-                  <div class="form-group">
+                  <div class="form-group" style="display:none;">
                       <label for="posLng">X</label>
                       <input type="text" class="form-control" id="posLng" placeholder="">
                   </div>
-                  <div class="form-group">
+                  <div class="form-group" style="display:none;">
                       <label for="posLat">Y</label>
                       <input type="text" class="form-control" id="posLat" placeholder="">
                   </div>
-                  <div class="form-group">
+                  <div class="form-group" style="display:none;">
                       <label for="TypeList">種類</label>
                       <select class="form-control" id="TypeList"></select>
                   </div>
