--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,14 @@
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
-
+    <!-- Bootstrap sub CSS -->
+    
+    <link href="./css/bootstrap-toggle.css" rel="stylesheet">
+    <style>
+      .toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px; border:solid 1px #dfdfdf;}
+      .toggle.ios .toggle-handle { border-radius: 20px; }
+    </style>
+    
     <!-- Custom styles for this template -->
     <!--link href="jumbotron.css" rel="stylesheet"-->
   </head>
@@ -53,7 +60,9 @@
           <div class="col-md-10">
             <h2>位置発信</h2>
             <div name="mapsend">
-              <div name="mapsend-map" id="mapsend-map" style="width:100%;height:300px;"></div>
+              <div class="form-group">
+                <div name="mapsend-map" id="mapsend-map" style="width:100%;height:300px;"></div>
+              </div>
               <form name="mapsend-navi">
                   <div class="form-group" style="display:none;">
                       <label for="posLng">X</label>
@@ -67,7 +76,10 @@
                       <label for="TypeList">種類</label>
                       <select class="form-control" id="TypeList"></select>
                   </div>
-                  <button type="button" id="SendBtn" class="btn btn-primary">送信する</button><span id="result1" name="result1"></span>
+                  <div class="form-group">
+                    <button type="button" id="SendBtn" class="btn btn-primary">送信する</button><span id="result1" name="result1"></span>
+                  </div>
+                  <input type="checkbox" data-toggle="toggle" data-on="GPS ON" data-off="GPS OFF" data-style="ios">
               </form>
             </div>
           </div>
@@ -88,6 +100,7 @@
     <!--script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script-->
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap-toggle.js"></script>
 
     <!-- NaoetuGps core JavaScript
     ================================================== -->
