--- a/www/index.html
+++ b/www/index.html
@@ -79,7 +79,7 @@
                   <div class="form-group">
                     <button type="button" id="SendBtn" class="btn btn-primary">送信する</button><span id="result1" name="result1"></span>
                   </div>
-                  <input type="checkbox" data-toggle="toggle" data-on="GPS ON" data-off="GPS OFF" data-style="ios">
+                  <input type="checkbox" id="GeoBtn" data-toggle="toggle" data-on="GPS ON" data-off="GPS OFF" data-style="ios">
               </form>
             </div>
           </div>
