--- a/www/index.html
+++ b/www/index.html
@@ -105,7 +105,7 @@
     <!-- NaoetuGps core JavaScript
     ================================================== -->
     <!-- Node.js - Socket.io -->
-    <script src="https://27.120.99.9:50001/socket.io/socket.io.js"></script>
+    <script src="http://27.120.99.9:50001/socket.io/socket.io.js"></script>
     <!-- NaoetuGps -->
     <script src="jsmy/naoetu.js"></script>
 
