--- a/www/index2.html
+++ b/www/index2.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="min-height: 70px;">
-        <a class="navbar-brand" href="#">NAOETU+GPS.</a>
+        <a class="navbar-brand" href="#">NAOETU+GPS...</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
